lampi-language-server/src/Lampi/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from Lampi/Par.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram_internal -> Program                (0)
	%start_pCommand_internal -> Command                (1)
	%start_pListCommand_internal -> ListCommand        (2)
	%start_pTerm2_internal -> Term2                    (3)
	%start_pTerm_internal -> Term                      (4)
	%start_pTerm1_internal -> Term1                    (5)
	%start_pScopedTerm_internal -> ScopedTerm          (6)
	%start_pPattern_internal -> Pattern                (7)
	VarIdent -> L_VarIdent                             (8)
	Program -> ListCommand                             (9)
	Command -> 'check' Term ':' Term                   (10)
	Command -> 'compute' Term ':' Term                 (11)
	ListCommand ->                                     (12)
	ListCommand -> Command ';' ListCommand             (13)
	Term2 -> VarIdent                                  (14)
	Term2 -> '(' Term ')'                              (15)
	Term -> 'Π' '(' Pattern ':' Term ')' '→' ScopedTerm   (16)
	Term -> 'λ' Pattern '.' ScopedTerm                 (17)
	Term -> Term1 '×' Term1                            (18)
	Term -> '(' Term ',' Term ')'                      (19)
	Term -> 'π₁' '(' Term ')'                          (20)
	Term -> 'π₂' '(' Term ')'                          (21)
	Term -> '𝕌'                                        (22)
	Term -> Term1                                      (23)
	Term1 -> Term1 Term2                               (24)
	Term1 -> Term2                                     (25)
	ScopedTerm -> Term                                 (26)
	Pattern -> '_'                                     (27)
	Pattern -> VarIdent                                (28)
	Pattern -> '(' Pattern ',' Pattern ')'             (29)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'.'            { PT _ (TS _ 4) }
	':'            { PT _ (TS _ 5) }
	';'            { PT _ (TS _ 6) }
	'_'            { PT _ (TS _ 7) }
	'check'        { PT _ (TS _ 8) }
	'compute'      { PT _ (TS _ 9) }
	'×'            { PT _ (TS _ 10) }
	'Π'            { PT _ (TS _ 11) }
	'λ'            { PT _ (TS _ 12) }
	'π₁'           { PT _ (TS _ 13) }
	'π₂'           { PT _ (TS _ 14) }
	'→'            { PT _ (TS _ 15) }
	'𝕌'            { PT _ (TS _ 16) }
	L_VarIdent     { PT _ (T_VarIdent _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram_internal rule  0
	%start_pCommand_internal rule  1
	%start_pListCommand_internal rule  2
	%start_pTerm2_internal rule  3
	%start_pTerm_internal rule  4
	%start_pTerm1_internal rule  5
	%start_pScopedTerm_internal rule  6
	%start_pPattern_internal rule  7
	VarIdent        rule  8
	Program         rule  9
	Command         rules 10, 11
	ListCommand     rules 12, 13
	Term2           rules 14, 15
	Term            rules 16, 17, 18, 19, 20, 21, 22, 23
	Term1           rules 24, 25
	ScopedTerm      rule  26
	Pattern         rules 27, 28, 29

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram_internal -> . Program               (rule 0)

	'check'        shift, and enter state 31
	'compute'      shift, and enter state 32
	%eof           reduce using rule 12

	Program        goto state 34
	Command        goto state 29
	ListCommand    goto state 35

State 1

	%start_pCommand_internal -> . Command               (rule 1)

	'check'        shift, and enter state 31
	'compute'      shift, and enter state 32

	Command        goto state 33

State 2

	%start_pListCommand_internal -> . ListCommand       (rule 2)

	'check'        shift, and enter state 31
	'compute'      shift, and enter state 32
	%eof           reduce using rule 12

	Command        goto state 29
	ListCommand    goto state 30

State 3

	%start_pTerm2_internal -> . Term2                   (rule 3)

	'('            shift, and enter state 26
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 28

State 4

	%start_pTerm_internal -> . Term                     (rule 4)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 27
	Term1          goto state 17

State 5

	%start_pTerm1_internal -> . Term1                   (rule 5)

	'('            shift, and enter state 26
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term1          goto state 25

State 6

	%start_pScopedTerm_internal -> . ScopedTerm         (rule 6)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 16
	Term1          goto state 17
	ScopedTerm     goto state 18

State 7

	%start_pPattern_internal -> . Pattern               (rule 7)

	'('            shift, and enter state 12
	'_'            shift, and enter state 13
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 10
	Pattern        goto state 11

State 8

	VarIdent -> . L_VarIdent                            (rule 8)

	L_VarIdent     shift, and enter state 9


State 9

	VarIdent -> L_VarIdent .                            (rule 8)

	'('            reduce using rule 8
	')'            reduce using rule 8
	','            reduce using rule 8
	'.'            reduce using rule 8
	':'            reduce using rule 8
	';'            reduce using rule 8
	'×'            reduce using rule 8
	L_VarIdent     reduce using rule 8
	%eof           reduce using rule 8


State 10

	Pattern -> VarIdent .                               (rule 28)

	')'            reduce using rule 28
	','            reduce using rule 28
	'.'            reduce using rule 28
	':'            reduce using rule 28
	%eof           reduce using rule 28


State 11

	%start_pPattern_internal -> Pattern .               (rule 7)

	%eof           accept


State 12

	Pattern -> '(' . Pattern ',' Pattern ')'            (rule 29)

	'('            shift, and enter state 12
	'_'            shift, and enter state 13
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 10
	Pattern        goto state 47

State 13

	Pattern -> '_' .                                    (rule 27)

	')'            reduce using rule 27
	','            reduce using rule 27
	'.'            reduce using rule 27
	':'            reduce using rule 27
	%eof           reduce using rule 27


State 14

	Term2 -> VarIdent .                                 (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	','            reduce using rule 14
	':'            reduce using rule 14
	';'            reduce using rule 14
	'×'            reduce using rule 14
	L_VarIdent     reduce using rule 14
	%eof           reduce using rule 14


State 15

	Term1 -> Term2 .                                    (rule 25)

	'('            reduce using rule 25
	')'            reduce using rule 25
	','            reduce using rule 25
	':'            reduce using rule 25
	';'            reduce using rule 25
	'×'            reduce using rule 25
	L_VarIdent     reduce using rule 25
	%eof           reduce using rule 25


State 16

	ScopedTerm -> Term .                                (rule 26)

	')'            reduce using rule 26
	','            reduce using rule 26
	':'            reduce using rule 26
	';'            reduce using rule 26
	%eof           reduce using rule 26


State 17

	Term -> Term1 . '×' Term1                           (rule 18)
	Term -> Term1 .                                     (rule 23)
	Term1 -> Term1 . Term2                              (rule 24)

	'('            shift, and enter state 26
	')'            reduce using rule 23
	','            reduce using rule 23
	':'            reduce using rule 23
	';'            reduce using rule 23
	'×'            shift, and enter state 46
	L_VarIdent     shift, and enter state 9
	%eof           reduce using rule 23

	VarIdent       goto state 14
	Term2          goto state 40

State 18

	%start_pScopedTerm_internal -> ScopedTerm .         (rule 6)

	%eof           accept


State 19

	Term2 -> '(' . Term ')'                             (rule 15)
	Term -> '(' . Term ',' Term ')'                     (rule 19)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 45
	Term1          goto state 17

State 20

	Term -> 'Π' . '(' Pattern ':' Term ')' '→' ScopedTerm    (rule 16)

	'('            shift, and enter state 44


State 21

	Term -> 'λ' . Pattern '.' ScopedTerm                (rule 17)

	'('            shift, and enter state 12
	'_'            shift, and enter state 13
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 10
	Pattern        goto state 43

State 22

	Term -> 'π₁' . '(' Term ')'                         (rule 20)

	'('            shift, and enter state 42


State 23

	Term -> 'π₂' . '(' Term ')'                         (rule 21)

	'('            shift, and enter state 41


State 24

	Term -> '𝕌' .                                       (rule 22)

	')'            reduce using rule 22
	','            reduce using rule 22
	':'            reduce using rule 22
	';'            reduce using rule 22
	%eof           reduce using rule 22


State 25

	%start_pTerm1_internal -> Term1 .                   (rule 5)
	Term1 -> Term1 . Term2                              (rule 24)

	'('            shift, and enter state 26
	L_VarIdent     shift, and enter state 9
	%eof           accept

	VarIdent       goto state 14
	Term2          goto state 40

State 26

	Term2 -> '(' . Term ')'                             (rule 15)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 39
	Term1          goto state 17

State 27

	%start_pTerm_internal -> Term .                     (rule 4)

	%eof           accept


State 28

	%start_pTerm2_internal -> Term2 .                   (rule 3)

	%eof           accept


State 29

	ListCommand -> Command . ';' ListCommand            (rule 13)

	';'            shift, and enter state 38


State 30

	%start_pListCommand_internal -> ListCommand .       (rule 2)

	%eof           accept


State 31

	Command -> 'check' . Term ':' Term                  (rule 10)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 37
	Term1          goto state 17

State 32

	Command -> 'compute' . Term ':' Term                (rule 11)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 36
	Term1          goto state 17

State 33

	%start_pCommand_internal -> Command .               (rule 1)

	%eof           accept


State 34

	%start_pProgram_internal -> Program .               (rule 0)

	%eof           accept


State 35

	Program -> ListCommand .                            (rule 9)

	%eof           reduce using rule 9


State 36

	Command -> 'compute' Term . ':' Term                (rule 11)

	':'            shift, and enter state 58


State 37

	Command -> 'check' Term . ':' Term                  (rule 10)

	':'            shift, and enter state 57


State 38

	ListCommand -> Command ';' . ListCommand            (rule 13)

	'check'        shift, and enter state 31
	'compute'      shift, and enter state 32
	%eof           reduce using rule 12

	Command        goto state 29
	ListCommand    goto state 56

State 39

	Term2 -> '(' Term . ')'                             (rule 15)

	')'            shift, and enter state 50


State 40

	Term1 -> Term1 Term2 .                              (rule 24)

	'('            reduce using rule 24
	')'            reduce using rule 24
	','            reduce using rule 24
	':'            reduce using rule 24
	';'            reduce using rule 24
	'×'            reduce using rule 24
	L_VarIdent     reduce using rule 24
	%eof           reduce using rule 24


State 41

	Term -> 'π₂' '(' . Term ')'                         (rule 21)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 55
	Term1          goto state 17

State 42

	Term -> 'π₁' '(' . Term ')'                         (rule 20)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 54
	Term1          goto state 17

State 43

	Term -> 'λ' Pattern . '.' ScopedTerm                (rule 17)

	'.'            shift, and enter state 53


State 44

	Term -> 'Π' '(' . Pattern ':' Term ')' '→' ScopedTerm    (rule 16)

	'('            shift, and enter state 12
	'_'            shift, and enter state 13
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 10
	Pattern        goto state 52

State 45

	Term2 -> '(' Term . ')'                             (rule 15)
	Term -> '(' Term . ',' Term ')'                     (rule 19)

	')'            shift, and enter state 50
	','            shift, and enter state 51


State 46

	Term -> Term1 '×' . Term1                           (rule 18)

	'('            shift, and enter state 26
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term1          goto state 49

State 47

	Pattern -> '(' Pattern . ',' Pattern ')'            (rule 29)

	','            shift, and enter state 48


State 48

	Pattern -> '(' Pattern ',' . Pattern ')'            (rule 29)

	'('            shift, and enter state 12
	'_'            shift, and enter state 13
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 10
	Pattern        goto state 66

State 49

	Term -> Term1 '×' Term1 .                           (rule 18)
	Term1 -> Term1 . Term2                              (rule 24)

	'('            shift, and enter state 26
	')'            reduce using rule 18
	','            reduce using rule 18
	':'            reduce using rule 18
	';'            reduce using rule 18
	L_VarIdent     shift, and enter state 9
	%eof           reduce using rule 18

	VarIdent       goto state 14
	Term2          goto state 40

State 50

	Term2 -> '(' Term ')' .                             (rule 15)

	'('            reduce using rule 15
	')'            reduce using rule 15
	','            reduce using rule 15
	':'            reduce using rule 15
	';'            reduce using rule 15
	'×'            reduce using rule 15
	L_VarIdent     reduce using rule 15
	%eof           reduce using rule 15


State 51

	Term -> '(' Term ',' . Term ')'                     (rule 19)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 65
	Term1          goto state 17

State 52

	Term -> 'Π' '(' Pattern . ':' Term ')' '→' ScopedTerm    (rule 16)

	':'            shift, and enter state 64


State 53

	Term -> 'λ' Pattern '.' . ScopedTerm                (rule 17)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 16
	Term1          goto state 17
	ScopedTerm     goto state 63

State 54

	Term -> 'π₁' '(' Term . ')'                         (rule 20)

	')'            shift, and enter state 62


State 55

	Term -> 'π₂' '(' Term . ')'                         (rule 21)

	')'            shift, and enter state 61


State 56

	ListCommand -> Command ';' ListCommand .            (rule 13)

	%eof           reduce using rule 13


State 57

	Command -> 'check' Term ':' . Term                  (rule 10)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 60
	Term1          goto state 17

State 58

	Command -> 'compute' Term ':' . Term                (rule 11)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 59
	Term1          goto state 17

State 59

	Command -> 'compute' Term ':' Term .                (rule 11)

	';'            reduce using rule 11
	%eof           reduce using rule 11


State 60

	Command -> 'check' Term ':' Term .                  (rule 10)

	';'            reduce using rule 10
	%eof           reduce using rule 10


State 61

	Term -> 'π₂' '(' Term ')' .                         (rule 21)

	')'            reduce using rule 21
	','            reduce using rule 21
	':'            reduce using rule 21
	';'            reduce using rule 21
	%eof           reduce using rule 21


State 62

	Term -> 'π₁' '(' Term ')' .                         (rule 20)

	')'            reduce using rule 20
	','            reduce using rule 20
	':'            reduce using rule 20
	';'            reduce using rule 20
	%eof           reduce using rule 20


State 63

	Term -> 'λ' Pattern '.' ScopedTerm .                (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	':'            reduce using rule 17
	';'            reduce using rule 17
	%eof           reduce using rule 17


State 64

	Term -> 'Π' '(' Pattern ':' . Term ')' '→' ScopedTerm    (rule 16)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 69
	Term1          goto state 17

State 65

	Term -> '(' Term ',' Term . ')'                     (rule 19)

	')'            shift, and enter state 68


State 66

	Pattern -> '(' Pattern ',' Pattern . ')'            (rule 29)

	')'            shift, and enter state 67


State 67

	Pattern -> '(' Pattern ',' Pattern ')' .            (rule 29)

	')'            reduce using rule 29
	','            reduce using rule 29
	'.'            reduce using rule 29
	':'            reduce using rule 29
	%eof           reduce using rule 29


State 68

	Term -> '(' Term ',' Term ')' .                     (rule 19)

	')'            reduce using rule 19
	','            reduce using rule 19
	':'            reduce using rule 19
	';'            reduce using rule 19
	%eof           reduce using rule 19


State 69

	Term -> 'Π' '(' Pattern ':' Term . ')' '→' ScopedTerm    (rule 16)

	')'            shift, and enter state 70


State 70

	Term -> 'Π' '(' Pattern ':' Term ')' . '→' ScopedTerm    (rule 16)

	'→'            shift, and enter state 71


State 71

	Term -> 'Π' '(' Pattern ':' Term ')' '→' . ScopedTerm    (rule 16)

	'('            shift, and enter state 19
	'Π'            shift, and enter state 20
	'λ'            shift, and enter state 21
	'π₁'           shift, and enter state 22
	'π₂'           shift, and enter state 23
	'𝕌'            shift, and enter state 24
	L_VarIdent     shift, and enter state 9

	VarIdent       goto state 14
	Term2          goto state 15
	Term           goto state 16
	Term1          goto state 17
	ScopedTerm     goto state 72

State 72

	Term -> 'Π' '(' Pattern ':' Term ')' '→' ScopedTerm .    (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16
	':'            reduce using rule 16
	';'            reduce using rule 16
	%eof           reduce using rule 16


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 30
Number of terminals: 17
Number of non-terminals: 17
Number of states: 73
